--- a/FermentrackManager/Base.lproj/Main.storyboard
+++ b/FermentrackManager/Base.lproj/Main.storyboard
@@ -1004,7 +1004,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" fixedFrame="YES" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="sNH-Qd-N8v">
-                                <rect key="frame" x="407" y="338" width="144" height="32"/>
+                                <rect key="frame" x="409" y="338" width="144" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="push" title="Start Web Server" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="YE5-R4-dpZ">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -1020,7 +1020,7 @@
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b2P-zG-byh">
-                                <rect key="frame" x="143" y="401" width="122" height="19"/>
+                                <rect key="frame" x="145" y="401" width="122" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Fermentrack site:" id="ls7-HQ-DkT">
                                     <font key="font" metaFont="systemLight" size="15"/>
@@ -1029,7 +1029,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L6A-oy-vA4">
-                                <rect key="frame" x="134" y="374" width="130" height="19"/>
+                                <rect key="frame" x="137" y="374" width="130" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Web server status:" id="8nq-q4-q5Z">
                                     <font key="font" metaFont="systemLight" size="15"/>
@@ -1038,8 +1038,8 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="by3-mp-KmC" customClass="LinkTextField" customModule="FermentrackManager" customModuleProvider="target">
-                                <rect key="frame" x="270" y="401" width="292" height="19"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <rect key="frame" x="271" y="401" width="408" height="19"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="truncatingMiddle" continuous="YES" sendsActionOnEndEditing="YES" alignment="left" title="http://localhost:8080" id="IvF-ER-orG">
                                     <font key="font" metaFont="systemLight" size="15"/>
                                     <color key="textColor" name="linkColor" catalog="System" colorSpace="catalog"/>
@@ -1050,7 +1050,7 @@
                                 </connections>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9MA-vx-sHf">
-                                <rect key="frame" x="270" y="374" width="182" height="19"/>
+                                <rect key="frame" x="271" y="374" width="182" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Running / Stopped / Setup" id="d9Z-zT-0Ja">
                                     <font key="font" metaFont="systemLight" size="15"/>
@@ -1062,9 +1062,9 @@
                                 </connections>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TSF-s1-n8P" customClass="LinkTextField" customModule="FermentrackManager" customModuleProvider="target">
-                                <rect key="frame" x="269" y="313" width="293" height="19"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="~/Library/Application Support/Fermentrack" id="Df2-vx-5Qw">
+                                <rect key="frame" x="271" y="313" width="393" height="19"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" lineBreakMode="truncatingMiddle" sendsActionOnEndEditing="YES" alignment="left" title="~/Library/Application Support/Fermentrack" id="Df2-vx-5Qw">
                                     <font key="font" metaFont="systemLight" size="15"/>
                                     <color key="textColor" name="linkColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1074,7 +1074,7 @@
                                 </connections>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ced-kJ-7LE">
-                                <rect key="frame" x="120" y="315" width="145" height="19"/>
+                                <rect key="frame" x="122" y="315" width="145" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Installation directory:" id="3yX-LX-H7d">
                                     <font key="font" metaFont="systemLight" size="15"/>
@@ -1083,7 +1083,7 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lcc-Ec-Lra">
-                                <rect key="frame" x="265" y="338" width="142" height="32"/>
+                                <rect key="frame" x="267" y="338" width="142" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="push" title="Stop Web Server" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="uAr-f2-oK7">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -1104,18 +1104,18 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="agz-Qa-7Ad" customClass="LinkTextField" customModule="FermentrackManager" customModuleProvider="target">
-                                <rect key="frame" x="272" y="238" width="275" height="19"/>
+                                <rect key="frame" x="271" y="238" width="275" height="19"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="http://docs.fermentrack.com/en/master/" id="xRb-Aa-TJS">
+                                <textFieldCell key="cell" lineBreakMode="truncatingMiddle" sendsActionOnEndEditing="YES" alignment="left" title="http://docs.fermentrack.com/en/master/" id="xRb-Aa-TJS">
                                     <font key="font" metaFont="systemLight" size="15"/>
                                     <color key="textColor" name="linkColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RrK-sC-Rp6" customClass="LinkTextField" customModule="FermentrackManager" customModuleProvider="target">
-                                <rect key="frame" x="272" y="275" width="390" height="19"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="file:///var/tmp/fermentrack_apache" id="EFp-YA-Ewr">
+                                <rect key="frame" x="271" y="275" width="390" height="19"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" lineBreakMode="truncatingMiddle" sendsActionOnEndEditing="YES" alignment="left" title="file:///var/tmp/fermentrack_apache" id="EFp-YA-Ewr">
                                     <font key="font" metaFont="systemLight" size="15"/>
                                     <color key="textColor" name="linkColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1145,6 +1145,10 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="696" id="RYp-7i-GfP"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="440" id="dLX-tr-4Rb"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="T8v-nV-np3" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
